--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   test-build:
     docker:
-      - image: python:3.7.3-stretch
+      - image: circleci/node:14
 
     steps:
       - checkout
