--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
       - run:
           name: Build docker container
           command: |
-            sudo docker build -t remambian/capstoneImage:latest .
+            sudo docker build -t remambian/capstoneimage:latest .
 
       - run:
           name: Log in to Docker Hub
@@ -38,7 +38,7 @@ jobs:
             echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
       - run:
           name: Push to Docker Hub
-          command: docker push remambian/capstoneImage:latest
+          command: docker push remambian/capstoneimage:latest
 
 workflows:
   default:
