--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -88,29 +88,52 @@ jobs:
               --parameter-overrides file://cloudformation/management-parameters.json \
               --output text >> ~/checkIfDeployed.txt
             cat ~/checkIfDeployed.txt
-      - run:
-          name: Extract the IPs of the management instances for Ansible 
-          command: |
-            echo [management] > ~/inventory.txt
-            aws ec2 describe-instances \
-              --region "${AWS_DEFAULT_REGION}" \
-              --query 'Reservations[*].Instances[*].PublicIpAddress' \
-              --filters "Name=tag:Name,Values=${ENVIRONMENT_NAME}-management*" \
-              --output text >> ~/inventory.txt
-            cat ~/inventory.txt
+      # - run:
+      #     name: Extract the IPs of the management instances for Ansible 
+      #     command: |
+      #       echo [management] > ~/inventory.txt
+      #       aws ec2 describe-instances \
+      #         --region "${AWS_DEFAULT_REGION}" \
+      #         --query 'Reservations[*].Instances[*].PublicIpAddress' \
+      #         --filters "Name=tag:Name,Values=${ENVIRONMENT_NAME}-management*" \
+      #         --output text >> ~/inventory.txt
+      #       cat ~/inventory.txt
       - persist_to_workspace:
           root: ~/
           paths:
             - inventory.txt
             - checkIfDeployed.txt
 
+  create-deployment:
+    docker:
+      - image: circleci/python:3.7
+    steps:
+      - checkout
+      - setup_remote_docker:
+          version: 20.10.7 # Use the appropriate Docker version
+      - run:
+            name: Deploy to EKS Cluster
+            command: |
+              # Install kubectl (if not already installed)
+              curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+              chmod +x kubectl
+              sudo mv kubectl /usr/local/bin/
+
+              # Authenticate with the EKS cluster using kubeconfig
+              aws eks update-kubeconfig --name "${ENVIRONMENT_NAME}-cluster-role" --region ${AWS_DEFAULT_REGION}
+
+              # Apply the Kubernetes deployment manifest
+              kubectl apply -f deployment.json
+
+
 
 
 workflows:
   default:
     jobs:
-      - test-build
-      - upload-docker:
-          requires:
-            - test-build
-      - deploy-infrastructure
+      # - test-build
+      # - upload-docker:
+      #     requires:
+      #       - test-build
+      # - deploy-infrastructure
+      - create-deployment
