--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Ensure EKS network exists 
           command: |
-            aws cloudformation update-stack \
+            aws cloudformation deploy \
               --template-file cloudformation/network.yml \
               --tags project=${ENVIRONMENT_NAME}-project \
               --stack-name "${ENVIRONMENT_NAME}-eks-network" \
@@ -59,7 +59,7 @@ jobs:
       - run:    
           name: Ensure EKS Cluster exists
           command: |
-            aws cloudformation update-stack \
+            aws cloudformation deploy \
               --template-file cloudformation/cluster.yml \
               --tags project=${ENVIRONMENT_NAME}-project \
               --stack-name "${ENVIRONMENT_NAME}-eks-cluster" \
@@ -70,7 +70,7 @@ jobs:
       - run:
           name: Ensure Nodegroup exists
           command: |
-            aws cloudformation update-stack \
+            aws cloudformation deploy \
               --template-file cloudformation/nodegroup.yml \
               --tags project=${ENVIRONMENT_NAME}-project \
               --stack-name "${ENVIRONMENT_NAME}-eks-nodegroup" \
@@ -80,7 +80,7 @@ jobs:
       - run:
           name: Ensure management instances exists
           command: |
-            aws cloudformation update-stack \
+            aws cloudformation deploy \
               --template-file cloudformation/management.yml \
               --tags project=${ENVIRONMENT_NAME}-project \
               --stack-name "${ENVIRONMENT_NAME}-eks-management" \
