--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -188,10 +188,10 @@ jobs:
 workflows:
   default:
     jobs:
-      # - test-build
-      # - upload-docker:
-      #     requires:
-      #       - test-build
+      - test-build
+      - upload-docker:
+          requires:
+            - test-build
       - deploy-infrastructure
       - configure-infrastructure:
           requires:
